--- a/clcgb.html
+++ b/clcgb.html
@@ -87,7 +87,7 @@
 
             <div data-silex-id="silex-id-1442914737143-3" class="editable-style silex-id-1442914737143-3 text-element" data-silex-type="text" style="">
                 <div class="silex-element-content normal">
-                    <div style="text-align: center;"><span style="color: rgb(255, 255, 255);"><a href="//www.silex.me">Powered by Silex</a></span></div>
+                    <p style="margin: 0px; text-align: center; font-size: 12px; line-height: normal; font-family: Helvetica;"><font color="#ffffff">Copyright © 2016 Whetstone CLCGB. All Rights Reserved. Website Developed By Hwatts Designs</font></p>
                 </div>
             </div>
         </div>
