--- a/clcgb.html
+++ b/clcgb.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" class="silex-script"></script>
     <style class="silex-inline-styles" type="text/css">
         .body-initial {
-            background-color: rgb(38, 38, 38); 
+            background-color: rgba(255,255,255,1); 
         }
         .silex-id-1474394621033-3 {
             min-height: 600px; 
@@ -60,7 +60,7 @@
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgb(38, 38, 38)"},"silex-id-1474394621033-3":{"min-height":"600px","top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"36px","width":"960px","top":"37px","left":"1px"},"silex-id-1481416150577-0":{"min-height":"92px","width":"110px","top":"15px","left":"18px"},"silex-id-1481416181829-1":{"min-height":"100px","width":"100px","top":"100px","left":"435.5px"},"silex-id-1481416190784-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1481416190785-3":{"min-height":"100px","top":"100px","left":"NaNpx"}},"mobile":{"silex-id-1442914737143-3":{"left":"-291px","top":"41px","width":"1252px","min-height":"20px"}}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"min-height":"600px","top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"36px","width":"960px","top":"37px","left":"1px"},"silex-id-1481416150577-0":{"min-height":"92px","width":"110px","top":"15px","left":"18px"},"silex-id-1481416181829-1":{"min-height":"100px","width":"100px","top":"100px","left":"435.5px"},"silex-id-1481416190784-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1481416190785-3":{"min-height":"100px","top":"100px","left":"NaNpx"}},"mobile":{"silex-id-1442914737143-3":{"left":"-291px","top":"41px","width":"1252px","min-height":"20px"}}}]
     </script>
     <style id="current-page-style">
         .page-contact-us{display:inherit; }
@@ -87,7 +87,7 @@
 
             <div data-silex-id="silex-id-1442914737143-3" class="editable-style silex-id-1442914737143-3 text-element" data-silex-type="text" style="">
                 <div class="silex-element-content normal">
-                    <p style="margin: 0px; text-align: center; line-height: normal; font-family: Helvetica;"><font color="#ffffff" size="2">Copyright © 2016 Whetstone CLCGB. All Rights Reserved. Website Developed By Hwatts Designs</font></p>
+                    <p style="margin: 0px; text-align: center; line-height: normal; font-family: Helvetica;"><font size="2">Copyright © 2016 Whetstone CLCGB. All Rights Reserved. Website Developed By Hwatts Designs</font></p>
                 </div>
             </div>
         </div>
