--- a/clcgb.html
+++ b/clcgb.html
@@ -21,13 +21,16 @@
             background-color: rgba(255,255,255,1); 
         }
         .silex-id-1474394621033-3 {
-            min-height: 600px; 
+            min-height: 792px; 
             top: 5px; 
             left: 0px; 
         }
         .silex-id-1474394621032-2 {
-            min-height: 600px; 
+            min-height: 792px; 
             background-color: rgb(255, 255, 255); 
+            top: 0px; 
+            left: 332px; 
+            width: 960px; 
         }
         .silex-id-1481416150577-0 {
             min-height: 92px; 
@@ -35,19 +38,28 @@
             top: 15px; 
             left: 18px; 
         }
+        .silex-id-1481417744546-4 {
+            min-height: 338px; 
+            width: 959px; 
+            top: 120px; 
+            left: 0px; 
+        }
         .silex-id-1474394605264-1 {
-            min-height: 100px; 
-            top: 100px; 
-            left: 100px; 
+            min-height: 54px; 
+            top: 792px; 
+            left: 0px; 
         }
         .silex-id-1474394605263-0 {
-            min-height: 100px; 
+            min-height: 54px; 
             background-color: transparent; 
+            top: 0px; 
+            left: 332px; 
+            width: 960px; 
         }
         .silex-id-1442914737143-3 {
-            min-height: 36px; 
-            width: 960px; 
-            top: 37px; 
+            min-height: 35px; 
+            width: 958px; 
+            top: 14px; 
             left: 1px; 
         }
         @media only screen and (max-width: 480px), only screen and (max-device-width: 480px){.silex-id-1442914737143-3 {
@@ -60,7 +72,7 @@
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"min-height":"600px","top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"36px","width":"960px","top":"37px","left":"1px"},"silex-id-1481416150577-0":{"min-height":"92px","width":"110px","top":"15px","left":"18px"},"silex-id-1481416181829-1":{"min-height":"100px","width":"100px","top":"100px","left":"435.5px"},"silex-id-1481416190784-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1481416190785-3":{"min-height":"100px","top":"100px","left":"NaNpx"}},"mobile":{"silex-id-1442914737143-3":{"left":"-291px","top":"41px","width":"1252px","min-height":"20px"}}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"min-height":"792px","top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"rgb(255, 255, 255)","top":"0px","left":"332px","width":"960px"},"silex-id-1474394605264-1":{"min-height":"54px","top":"792px","left":"0px"},"silex-id-1474394605263-0":{"min-height":"53px","background-color":"transparent","top":"0px","left":"332px","width":"960px"},"silex-id-1442914737143-3":{"min-height":"73px","width":"960px","top":"14px","left":"1px"},"silex-id-1481416150577-0":{"min-height":"92px","width":"110px","top":"15px","left":"18px"},"silex-id-1481416181829-1":{"min-height":"100px","width":"100px","top":"100px","left":"435.5px"},"silex-id-1481416190784-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1481416190785-3":{"min-height":"100px","top":"100px","left":"NaNpx"},"silex-id-1481417744546-4":{"min-height":"338px","width":"959px","top":"120px","left":"0px"}},"mobile":{"silex-id-1442914737143-3":{"left":"-291px","top":"41px","width":"1252px","min-height":"20px"}}}]
     </script>
     <style id="current-page-style">
         .page-contact-us{display:inherit; }
@@ -80,7 +92,9 @@
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1474394621033-3 section-element" data-silex-id="silex-id-1474394621033-3">
         <div data-silex-type="container" class="editable-style silex-element-content default-site-width silex-id-1474394621032-2 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1474394621032-2">
             <div data-silex-type="image" class="editable-style silex-id-1481416150577-0 image-element" data-silex-id="silex-id-1481416150577-0" style="" data-silex-href="#!page-home"><img src="3RH3hwPHQWWRJCEg2lPlWAAh8zHxfyH5lBByXTEI2CJK8QCOxQMhexmBgxKhgREQ1RD1UwMepzjDTnEYYSAxsiPtLxCmEYJFrAQgsxXehGOPGybIJgKAVTUl3HPbOCAPAVX2QBRg8RD9ulYHN3ACjDXwhBDxjBKAdgYYbwbroZKvhVXwKWnPfFfGNRBfRgKXmyEfCwTyIhEaJiKQuhTBsCFhAAOw==.gif" class="silex-element-content"></div>
-        </div>
+            <div
+            data-silex-type="image" class="editable-style silex-id-1481417744546-4 image-element" data-silex-id="silex-id-1481417744546-4" style=""><img src="CLCGB%20Header.png" class="silex-element-content"></div>
+    </div>
     </div>
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1474394605264-1 section-element" data-silex-id="silex-id-1474394605264-1">
         <div data-silex-type="container" class="editable-style silex-element-content default-site-width silex-id-1474394605263-0 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1474394605263-0">
