--- a/clcgb.html
+++ b/clcgb.html
@@ -21,12 +21,12 @@
             background-color: rgba(255,255,255,1); 
         }
         .silex-id-1474394621033-3 {
-            min-height: 792px; 
+            min-height: 814px; 
             top: 5px; 
             left: 0px; 
         }
         .silex-id-1474394621032-2 {
-            min-height: 792px; 
+            min-height: 814px; 
             background-color: rgb(255, 255, 255); 
             top: 0px; 
             left: 332px; 
@@ -44,13 +44,19 @@
             top: 120px; 
             left: 0px; 
         }
+        .silex-id-1481417988966-5 {
+            min-height: 204px; 
+            width: 539px; 
+            top: 494px; 
+            left: 8px; 
+        }
         .silex-id-1474394605264-1 {
-            min-height: 54px; 
+            min-height: 53px; 
             top: 792px; 
             left: 0px; 
         }
         .silex-id-1474394605263-0 {
-            min-height: 54px; 
+            min-height: 53px; 
             background-color: transparent; 
             top: 0px; 
             left: 332px; 
@@ -72,8 +78,12 @@
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"min-height":"792px","top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"rgb(255, 255, 255)","top":"0px","left":"332px","width":"960px"},"silex-id-1474394605264-1":{"min-height":"54px","top":"792px","left":"0px"},"silex-id-1474394605263-0":{"min-height":"53px","background-color":"transparent","top":"0px","left":"332px","width":"960px"},"silex-id-1442914737143-3":{"min-height":"35px","width":"958px","top":"14px","left":"1px"},"silex-id-1481416150577-0":{"min-height":"92px","width":"110px","top":"15px","left":"18px"},"silex-id-1481416181829-1":{"min-height":"100px","width":"100px","top":"100px","left":"435.5px"},"silex-id-1481416190784-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1481416190785-3":{"min-height":"100px","top":"100px","left":"NaNpx"},"silex-id-1481417744546-4":{"min-height":"338px","width":"959px","top":"120px","left":"0px"}},"mobile":{"silex-id-1442914737143-3":{"left":"-291px","top":"41px","width":"1252px","min-height":"20px"}}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"min-height":"814px","top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"600px","background-color":"rgb(255, 255, 255)","top":"0px","left":"332px","width":"960px"},"silex-id-1474394605264-1":{"min-height":"53px","top":"792px","left":"0px"},"silex-id-1474394605263-0":{"min-height":"53px","background-color":"transparent","top":"0px","left":"332px","width":"960px"},"silex-id-1442914737143-3":{"min-height":"35px","width":"958px","top":"14px","left":"1px"},"silex-id-1481416150577-0":{"min-height":"92px","width":"110px","top":"15px","left":"18px"},"silex-id-1481416181829-1":{"min-height":"100px","width":"100px","top":"100px","left":"435.5px"},"silex-id-1481416190784-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1481416190785-3":{"min-height":"100px","top":"100px","left":"NaNpx"},"silex-id-1481417744546-4":{"min-height":"338px","width":"959px","top":"120px","left":"0px"},"silex-id-1481417988966-5":{"min-height":"201px","width":"539px","top":"494px","left":"8px"},"silex-id-1481418073579-6":{"min-height":"100px","width":"100px","top":"567px","left":"15px"}},"mobile":{"silex-id-1442914737143-3":{"left":"-291px","top":"41px","width":"1252px","min-height":"20px"}}}]
     </script>
+
+
+
+
     <style id="current-page-style">
         .page-contact-us{display:inherit; }
     </style>
@@ -92,9 +102,18 @@
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1474394621033-3 section-element" data-silex-id="silex-id-1474394621033-3">
         <div data-silex-type="container" class="editable-style silex-element-content default-site-width silex-id-1474394621032-2 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1474394621032-2">
             <div data-silex-type="image" class="editable-style silex-id-1481416150577-0 image-element" data-silex-id="silex-id-1481416150577-0" style="" data-silex-href="#!page-home"><img src="3RH3hwPHQWWRJCEg2lPlWAAh8zHxfyH5lBByXTEI2CJK8QCOxQMhexmBgxKhgREQ1RD1UwMepzjDTnEYYSAxsiPtLxCmEYJFrAQgsxXehGOPGybIJgKAVTUl3HPbOCAPAVX2QBRg8RD9ulYHN3ACjDXwhBDxjBKAdgYYbwbroZKvhVXwKWnPfFfGNRBfRgKXmyEfCwTyIhEaJiKQuhTBsCFhAAOw==.gif" class="silex-element-content"></div>
-            <div
-            data-silex-type="image" class="editable-style silex-id-1481417744546-4 image-element" data-silex-id="silex-id-1481417744546-4" style=""><img src="CLCGB%20Header.png" class="silex-element-content"></div>
-    </div>
+            <div data-silex-type="image" class="editable-style silex-id-1481417744546-4 image-element" data-silex-id="silex-id-1481417744546-4" style=""><img src="CLCGB%20Header.png" class="silex-element-content"></div>
+            <div data-silex-type="text" class="editable-style silex-id-1481417988966-5 text-element" data-silex-id="silex-id-1481417988966-5" style="">
+                <div class="silex-element-content normal"><font size="4" style="background-color: rgb(255, 255, 255);"><span style="font-family: Verdana, 'Lucida Grande', Arial, sans-serif;">Welcome to the Official Website of Whetstone CLCGB</span><br style="margin: 0px; padding: 0px; font-family: Verdana, 'Lucida Grande', Arial, sans-serif;"><span style="font-family: Verdana, 'Lucida Grande', Arial, sans-serif;">A youth group, With a difference!</span></font>
+                    <div><font size="4" style="background-color: rgb(255, 255, 255);"><span style="font-family: Verdana, 'Lucida Grande', Arial, sans-serif;"><br></span></font></div>
+                    <div><font size="4" style="background-color: rgb(255, 255, 255);"><span style="font-family: Verdana, 'Lucida Grande', Arial, sans-serif;"><br></span></font></div>
+                    <div><span style="background-color: rgb(255, 255, 255);"><span style="font-family: Verdana, 'Lucida Grande', Arial, sans-serif; font-size: 15px;">Based in Whetstone, Leicestershire we have members from all across the county. We are a busy organisation providing a number of activities and services to the young people of Leicestershire.</span>
+                        <br
+                        style="margin: 0px; padding: 0px; font-family: Verdana, 'Lucida Grande', Arial, sans-serif; font-size: 15px;"><span style="font-family: Verdana, 'Lucida Grande', Arial, sans-serif; font-size: 15px;">We have our own traditional marching brass band with tuned percussion and a corps of drums.</span></span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1474394605264-1 section-element" data-silex-id="silex-id-1474394605264-1">
         <div data-silex-type="container" class="editable-style silex-element-content default-site-width silex-id-1474394605263-0 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1474394605263-0">
@@ -106,6 +125,10 @@
             </div>
         </div>
     </div>
+
+
+
+
 
 
 
