--- a/clcgb.html
+++ b/clcgb.html
@@ -84,6 +84,10 @@
 
 
 
+
+
+
+
     <style id="current-page-style">
         .page-contact-us{display:inherit; }
     </style>
@@ -98,18 +102,17 @@
             class="silex-element-content">
         </div>
 
-        <a id="page-home" data-silex-type="page" class="page-element">Home</a><a id="page-contact-us" data-silex-type="page" class="page-element page-link-active">Contact Us</a><a id="page-the-band" data-silex-type="page" class="page-element">The Band</a></div>
+        <a id="page-home" data-silex-type="page" class="page-element">Home</a></div>
     <div data-silex-type="container" class="prevent-draggable container-element editable-style silex-id-1474394621033-3 section-element" data-silex-id="silex-id-1474394621033-3">
         <div data-silex-type="container" class="editable-style silex-element-content default-site-width silex-id-1474394621032-2 silex-container-content container-element prevent-draggable" data-silex-id="silex-id-1474394621032-2">
             <div data-silex-type="image" class="editable-style silex-id-1481416150577-0 image-element" data-silex-id="silex-id-1481416150577-0" style="" data-silex-href="#!page-home"><img src="3RH3hwPHQWWRJCEg2lPlWAAh8zHxfyH5lBByXTEI2CJK8QCOxQMhexmBgxKhgREQ1RD1UwMepzjDTnEYYSAxsiPtLxCmEYJFrAQgsxXehGOPGybIJgKAVTUl3HPbOCAPAVX2QBRg8RD9ulYHN3ACjDXwhBDxjBKAdgYYbwbroZKvhVXwKWnPfFfGNRBfRgKXmyEfCwTyIhEaJiKQuhTBsCFhAAOw==.gif" class="silex-element-content"></div>
-            <div data-silex-type="image" class="editable-style silex-id-1481417744546-4 image-element page-home paged-element" data-silex-id="silex-id-1481417744546-4" style=""><img src="CLCGB%20Header.png" class="silex-element-content"></div>
-            <div data-silex-type="text" class="editable-style silex-id-1481417988966-5 text-element page-home paged-element" data-silex-id="silex-id-1481417988966-5" style="">
+            <div data-silex-type="image" class="editable-style silex-id-1481417744546-4 image-element" data-silex-id="silex-id-1481417744546-4" style=""><img src="CLCGB%20Header.png" class="silex-element-content"></div>
+            <div data-silex-type="text" class="editable-style silex-id-1481417988966-5 text-element" data-silex-id="silex-id-1481417988966-5" style="">
                 <div class="silex-element-content normal"><font size="4" style="background-color: rgb(255, 255, 255);"><span style="font-family: Verdana, 'Lucida Grande', Arial, sans-serif;">Welcome to the Official Website of Whetstone CLCGB</span><br style="margin: 0px; padding: 0px; font-family: Verdana, 'Lucida Grande', Arial, sans-serif;"><span style="font-family: Verdana, 'Lucida Grande', Arial, sans-serif;">A youth group, With a difference!</span></font>
                     <div><font size="4" style="background-color: rgb(255, 255, 255);"><span style="font-family: Verdana, 'Lucida Grande', Arial, sans-serif;"><br></span></font></div>
                     <div><font size="4" style="background-color: rgb(255, 255, 255);"><span style="font-family: Verdana, 'Lucida Grande', Arial, sans-serif;"><br></span></font></div>
                     <div><span style="background-color: rgb(255, 255, 255);"><span style="font-family: Verdana, 'Lucida Grande', Arial, sans-serif; font-size: 15px;">Based in Whetstone, Leicestershire we have members from all across the county. We are a busy organisation providing a number of activities and services to the young people of Leicestershire.</span>
-                        <br
-                        style="margin: 0px; padding: 0px; font-family: Verdana, 'Lucida Grande', Arial, sans-serif; font-size: 15px;"><span style="font-family: Verdana, 'Lucida Grande', Arial, sans-serif; font-size: 15px;">We have our own traditional marching brass band with tuned percussion and a corps of drums.</span></span>
+                        <br style="margin: 0px; padding: 0px; font-family: Verdana, 'Lucida Grande', Arial, sans-serif; font-size: 15px;"><span style="font-family: Verdana, 'Lucida Grande', Arial, sans-serif; font-size: 15px;">We have our own traditional marching brass band with tuned percussion and a corps of drums.</span></span>
                     </div>
                 </div>
             </div>
@@ -125,6 +128,10 @@
             </div>
         </div>
     </div>
+
+
+
+
 
 
 
